# ArdupilotLogReader

./: .gitignore  README.md  ReadMe.md  ReadMe.txt  dotag.sh  last_tag  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish_pypi.yml  publish_test_pypi.yml
ArdupilotLogReader/: test.py
ardupilot_log_reader/: __init__.py  reader.py
tests/: test_ardupilot.py
