[metadata]
name=ardupilot_log_reader
author=Thomas David
author_email=thomasdavid0@gmail.com
description=module to read ardupilot binary logs to memory
long_description=file: ReadMe.md
long_description_content_type = text/markdown
version=0.1.0
url=https://github.com/PyFlightCoach/ardupilot_log_reader

[options]
install_requires = 
    future
    numpy
    pandas
    pymavlink
packages=
    ardupilot_log_reader
